@@ -85,6 +85,7 @@ config_create()
 	cfg->rrset_cache_slabs = 4;
 	cfg->host_ttl = 900;
 	cfg->lame_ttl = 900;
+	cfg->bogus_ttl = 900;
 	cfg->infra_cache_slabs = 4;
 	cfg->infra_cache_numhosts = 1000;
 	cfg->infra_cache_numlame = 1000;
